			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

15-May-2003
~~~~~~~~~~~
Added Japanese translation (UTUMI Hirosi).

14-May-2003
~~~~~~~~~~~
Page Up and Page Down now work again in List View.

27-Apr-2003
~~~~~~~~~~~
Updated install script to use new XDG Base Directory spec (reported by
Vincent Lefevre).
Also install man pages under 'share/man'.

25-Apr-2003
~~~~~~~~~~~
Close stdout when running child processes for users running startx from the
console, since some terminal applications try to read from the console,
freezing X (Keith R. John Warno).
Forward scroll events on pinboard to window manager, and add option to
workaround *box issues (Matthew Weier O'Phinney).

24-Apr-2003
~~~~~~~~~~~
Using the bookmarks menu to open an unmounted mount point will mount it
(Arnaud Calvo).

17-Apr-2003
~~~~~~~~~~~
Updates for the new shared MIME database.

15-Apr-2003
~~~~~~~~~~~
Refresh refreshed the directory twice (because updating the MIME info triggers
a refresh too).

12-Apr-2003
~~~~~~~~~~~
Remove default GtkTreeView keys (they conflicted with the menus).
Fixed some minor cursor problems in List view.

10-Apr-2003
~~~~~~~~~~~
Winking now works in List view.

09-Apr-2003
~~~~~~~~~~~
Lasso selections now work in List view.

08-Apr-2003
~~~~~~~~~~~
The hack we have to use to draw pinboard icons on GTK+-2.0 doesn't work
on 2.2. Show a warning instead of crashing (reported by Keith R. John Warno).

03-Apr-2003
~~~~~~~~~~~
Fix the message in install.sh, since there is no information toolbar icon
now (spotted by Albert Wagner).

29-Mar-2003 (Release 1.3.8)
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

28-Mar-2003
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

27-Mar-2003
~~~~~~~~~~~
Allow dragging a file into a GtkEntry to insert the filename.
Bugfix: Selections in List View didn't work properly (reported by Stephen
	Watson).
Updated Spanish translation (Marcelo Ramos).

23-Mar-2003
~~~~~~~~~~~