@@ -6,13 +6,6 @@ This is a list of features that should/will be added when I have time (or
 when someone sends patches!).
 
 
-			BUGS
-
-Stable release mustn't use DISABLE_DEPRECATED.
-
-dnotify: should wait a little before rescanning.
-
-
 			FEATURES FOR 2.1
 
 Sorting by group/user should use name (Bernard Jungen).
