@@ -5,6 +5,8 @@
 15-May-2003
 ~~~~~~~~~~~
 Added Japanese translation (UTUMI Hirosi).
+When a directory change is detected, wait a little before rescanning to
+reduce flickering effect.
 
 14-May-2003
 ~~~~~~~~~~~
